Bug 107070 - Problem with permissions of pipe created by module-pipe-sink
Summary: Problem with permissions of pipe created by module-pipe-sink
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: modules (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 107071
  Show dependency treegraph
 
Reported: 2018-06-29 14:59 UTC by devriesb
Modified: 2018-07-10 12:57 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description devriesb 2018-06-29 14:59:39 UTC
I'm on archlinux.  When upgrading to pulseaudio 12, my setup with pulse running as system daemon and outputting to a fifo pipe stopped working.

The setup is:
mpd -> pulseaudio (system) -> fifo -> snapserver (part of snapcast)

Pulseaudio is running in system mode because it's a headless server broadcasting the audio over the network through snapcast.


I traced the problem back to the change in umask setting in pulseaudio 12.
This causes the pipe to be created by pulseaudio with only read and write permissions for the pulse user, where before it was also allowing read permissions for the pulse group.

Creating the sink pipe with only permissions for the pulse user is completely useless, since any program that's reading the pipe will very likely be running under a different user.
This basically renders the sink pipe useless in system mode, and will probably also have consequences or side-effects in user mode.


This is my very first ticket here, so please let me know if additional information is needed.
Comment 1 Tanu Kaskinen 2018-06-29 18:30:04 UTC
Thanks for reporting!

I think we should make a bugfix release (12.1) soon with a fix for this regression, but I'll anyway mark this as a 13.0 blocker.
Comment 2 Tanu Kaskinen 2018-07-04 10:41:34 UTC
I submitted a patch:
https://patchwork.freedesktop.org/patch/236289/
Comment 3 Tanu Kaskinen 2018-07-10 12:57:43 UTC
The fix is now in master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.